fix overflow chat image

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -24,6 +24,7 @@
     width: 4rem;
     height: 4rem;
     border-radius: 0.25rem;
+    overflow: hidden;
 }
 
 #chat-messages {
